--- a/styles.css
+++ b/styles.css
@@ -729,7 +729,7 @@ body {
             width: 100%;
             height: 100%;
 
-            .hero-bg-blur {
+            .hero-background-blur {
                 position: absolute;
                 inset: 0;
                 z-index: 1;
